--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.3.1
 aiostream==0.5.2
 annotated-types==0.6.0
 anyio==3.7.1
+async-timeout==4.0.3
 attrs==23.1.0
 beautifulsoup4==4.12.2
 blinker==1.7.0
@@ -12,6 +13,7 @@ click==8.1.7
 dataclasses-json==0.6.3
 Deprecated==1.2.14
 distro==1.8.0
+docx2txt==0.8
 Flask==3.0.0
 frozenlist==1.4.0
 fsspec==2023.10.0
@@ -36,8 +38,10 @@ packaging==23.2
 pandas==2.1.3
 pydantic==2.5.2
 pydantic_core==2.14.5
+pypdf==3.17.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
+redis==5.0.1
 regex==2023.10.3
 requests==2.31.0
 six==1.16.0
